Loading objects from cloudflare
